--- a/config/boards/shields/cocot46p/cocot46p.conf
+++ b/config/boards/shields/cocot46p/cocot46p.conf
@@ -1,4 +1,11 @@
 #Main
+# 强制启用电源管理，不因USB连接而禁用
+CONFIG_PM=y
+CONFIG_PM_POLICY_RESUSPEND=y
+
+# 确保蓝牙控制器也支持睡眠
+CONFIG_BT_CTLR_LOW_LAT=y
+
 CONFIG_ZMK_KEYBOARD_NAME="Cocot46p"
 CONFIG_SPI=y
 CONFIG_INPUT=y
